# smart-cal-event-creator

./: Dockerfile  README.md  doctor.ics  event.ics  pyproject.toml
app/: config.py  main.py
app/models/: __init__.py  event_model.py  ics_model.py  input.py
app/prompts/: prompts.py
app/routers/: event.py
app/services/: email_handler.py  ics_generator.py  parser.py
app/static/: favicon_base64.txt  styles.css
app/templates/: index.html
outputs/: doctor-this-sunday.ics
temp/: test-prompts.txt
tests/: test_main.py
