[tool.poetry]
name = "smart-cal-event-creator"
version = "0.1.0"
description = ""
authors = ["annyedge <annyedge@tutamail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.4"
icalendar = "^6.0.1"
pytz = "^2024.2"
uvicorn = "^0.32.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
numpy = ">=1.26.2,<2"
langchain = "0.3.9"
langchain-community = "0.3.8"
python-multipart = "^0.0.18"
langchain-ollama = "^0.2.0"
parse = "^1.20.2"
python-dotenv = "^1.0.1"
dateparser = "^1.2.0"
jinja2 = "^3.1.4"
exceptiongroup = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
